2005-01-15  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/AddWindow.glade:
	* src/AddWindow.cs:

	Restore mnemonic behaviour.

2005-01-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddWindowEntry.cs:

	Initialize search_bits to an empty array.

2005-01-15  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	R src/DBusService.cs:
	* src/Global.cs:
	* src/Makefile.am:
	* src/MuineDBusService.cs:

	Renamed MuineDBusService to DBusService, now that we have the
	Muine namespace.

2005-01-15  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* data/glade/ProgressWindow.glade:
	* libmuine/Makefile.am:
	R libmuine/markup-utils.c:
	R libmuine/markup-utils.h:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/CoverGetter.cs:
	* src/EllipsizingLabel.cs:
	* src/ErrorDialog.cs:
	* src/KeyUtils.cs:
	* src/Makefile.am:
	R src/MarkupUtils.cs:
	* src/PlaylistWindow.cs:
	* src/ProgressWindow.cs:
	* src/StringUtils.cs:

	Obsolete MarkupUtils, we use pango xml-style markup instead.
	We add it in the code everywhere, apart from the playlist label-
	it is in the translatable string there, otherwise we can't do RTL right.
	This was a bug before.

2005-01-15  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/string-utils.c: (string_utils_strip_non_alnum):
	* libmuine/string-utils.h:
	* src/AddWindowEntry.cs:
	* src/StringUtils.cs:

	Stop the lunacy of regenerating SearchBits for each item
	we are trying to match. Back on speed.

	Also add a "different" bool to strip_non_alnum, so that we
	don't have to strcmp.

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/Makefile.am:
	* libmuine/string-utils.c: (string_utils_strip_non_alnum):
	* libmuine/string-utils.h:
	* src/Album.cs:
	* src/Song.cs:
	* src/StringUtils.cs:

	Strip non alphanumeric chars (and non-spaces) from the SearchKey,
	so that "rem" also yiels "R.E.M.".

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:
	* src/SongDatabase.cs:

	Add Album.RemoveArtistsAndPerformers.

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>
